--- a/SCE-Final-Project-2024/appsettings.json
+++ b/SCE-Final-Project-2024/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "acsceacil.onmicrosoft.com",
+    "TenantId": "e9f2930f-42e0-483b-86ad-e24f4e53b1a9",
+    "ClientId": "31f19950-1028-4ad9-b4da-489d8135d3e7",
+    "CallbackPath": "/signin-oidc"
+  }
 }
