--- a/SCE-Final-Project-2024/appsettings.json
+++ b/SCE-Final-Project-2024/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AccountDbContextConnection": "Server=IP\\SQLEXPRESS;Database=FinalProjectDB;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;"
+    "AccountDbContextConnection": "Server=DESKTOP-E4BN869;Database=FinalProjectDB;Integrated Security=True;Encrypt=True;TrustServerCertificate=True;"
   }
 }
