--- a/SCE-Final-Project-2024/SCE-Final-Project-2024.csproj
+++ b/SCE-Final-Project-2024/SCE-Final-Project-2024.csproj
@@ -24,6 +24,9 @@
     <PackageReference Include="Microsoft.Office.Interop.Word" Version="15.0.4797.1004" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
     <PackageReference Include="MimeKit" Version="4.3.0" />
+    <PackageReference Include="Serilog" Version="3.1.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="Syncfusion.DocIO.Net.Core" Version="24.2.3" />
     <PackageReference Include="Syncfusion.EJ2.AspNet.Core" Version="24.1.41" />
   </ItemGroup>
