--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
         "jsonwebtoken": "^9.0.2",
         "morgan": "^1.10.0",
         "node-localstorage": "^3.0.5",
+        "nodemailer": "^6.9.10",
         "pg": "^8.7.1",
         "sequelize": "^6.6.5",
         "tedious": "^17.0.0"
