--- a/backend/package.json
+++ b/backend/package.json
@@ -12,17 +12,13 @@
     "dependencies": {
         "bcrypt": "^5.1.1",
         "body-parser": "^1.19.0",
-        "connect-session-sequelize": "^7.1.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "express": "^4.17.1",
-        "express-session": "^1.17.2",
         "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.2.0",
         "morgan": "^1.10.0",
         "node-localstorage": "^3.0.5",
-        "nodemailer": "^6.9.10",
-        "pg": "^8.7.1",
-        "sequelize": "^6.6.5",
-        "tedious": "^17.0.0"
+        "nodemailer": "^6.9.10"
     }
 }
