--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
         "express": "^4.17.1",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.2.0",
+        "moongose": "^1.0.0",
         "morgan": "^1.10.0",
         "node-localstorage": "^3.0.5",
         "nodemailer": "^6.9.10"
