--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,8 +8,8 @@
     ],
     "routes": [
       {
-        "src": "/api/(.*)",
-        "dest": "backend/api/$1.js"
+        "src": "/(.*)",
+        "dest": "backend/$1.js"
       }
     ]
   }
