--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
-        "dev": "nodemon server.js"
+        "dev": "nodemon server.js",
+        "test": "jest"
     },
     "author": "Your Name",
     "license": "MIT",
@@ -21,5 +22,11 @@
         "morgan": "^1.10.0",
         "node-localstorage": "^3.0.5",
         "nodemailer": "^6.9.10"
+    },
+    "devDependencies": {
+        "jest": "^29.7.0",
+        "mockingoose": "^2.16.2",
+        "mongoose-mock": "^0.4.0",
+        "supertest": "^7.0.0"
     }
 }
