--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test":  "jest --runInBand",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -45,6 +45,7 @@
     "@babel/preset-react": "^7.24.7",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
+    "axios-mock-adapter": "^2.0.0",
     "babel-jest": "^29.7.0",
     "crypto-browserify": "^3.12.0",
     "jest": "^27.5.1"
