--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@syncfusion/ej2-base": "^24.2.8",
     "@syncfusion/ej2-react-documenteditor": "^24.2.9",
     "@testing-library/user-event": "^13.5.0",
@@ -18,7 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test":  "jest --runInBand",
+    "test": "jest --runInBand",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
