--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:dev": "cross-env NODE_ENV=development react-scripts start",
+    "start:prod": "cross-env NODE_ENV=production react-scripts start",
     "build": "react-scripts build",
     "test": "jest --runInBand",
     "eject": "react-scripts eject"
@@ -48,6 +50,7 @@
     "@testing-library/react": "^16.0.0",
     "axios-mock-adapter": "^2.0.0",
     "babel-jest": "^29.7.0",
+    "cross-env": "^7.0.3",
     "crypto-browserify": "^3.12.0",
     "jest": "^27.5.1"
   }
